--- a/porocilo_seminar_D.Rmd
+++ b/porocilo_seminar_D.Rmd
@@ -61,6 +61,26 @@ diferenciranje:
 
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+p <-  periodogram(x)$lambda[which.max(periodogram(x)$periodogram)] 
+p2 <- periodogram(x)$periodogram[208] #ni statistično značilna!
+# perioda3 <- periodogram(x)$periodogram[206]
+# perioda4 <- periodogram(x)$periodogram[209]
+# perioda5 <- periodogram(x)$periodogram[205]  
+
+t <- time(x)
+mod.H <- lm(x ~  I(sin(p*t)) + I(cos(p*t)) + I(sin(p2*t)) + I(cos(p2*t)))
+summary(mod.H)
+
+x.fit <- mod.H$fitted.values
+x.res <- mod.H$residuals
+
+x.fit <- ts(x.fit,start=start(x),frequency=frequency(x))
+x.res <- ts(x.res,start=start(x),frequency=frequency(x))
+
+
+
+
+
 #Opazujmo diference
 d <- diff(x)
 plot(d, main='Diference časovne vrste A', xlim = c(0,100), ylab=expression(paste(nabla,x[t])),type='l')
@@ -166,7 +186,7 @@ par(mfrow=c(2,1))
 
 my.trend <- function(t){coefficients(mod.H2)[1]}
 
-plot(my.trend, from=0, to=length(mod.H2),
+plot(rep(my.trend(1), length(mod.H2)), type="l",
       main="Time series decomposition",
       xlab="Time",
       ylab="Trend")
@@ -179,8 +199,6 @@ curve(my.season,from=0, to=length(mod.H2),
       ylab="Season")
 
 par(mfrow=c(1,1))
-
-plot(stl(x,s.window="periodic"))
 
 ```
 
@@ -222,7 +240,7 @@ Acf(d.res, main = "Acf residuals") #MA(1)
 Pacf(d.res, main = "Pacf residuals") #AR(3) # zdej spet pride 10??
 
 #PREDLOG MODELA:
-komentar <- paste('Predlagava izbiro modela MA(1) in AR(3), torej ARMA(1,3).')
+komentar <- paste('Predlagava izbiro modela MA(1) in AR(10), torej ARMA(1,10).')
 print(komentar)
 
 ```
@@ -336,313 +354,30 @@ optimal_interval <- c(napoved + val1 - z*sd1,napoved + val1+z*sd1)
 plot(x, type='l',xlim=c(750,840), main="Prediction")
 points(append(x, naslednji), main="Prediction", ylab="Value")
 points(append(x[829],naslednji), main="Prediction", ylab="Value", col='red')
-```
 
-<h5> 9. Dobljeni napovedni interval primerjajte z napovednim intervalom, ki bi ga dobili, če bi naivno privzeli, da so podatki kar Gaussov beli šum – pred in po odstranitvi trenda in sezonskosti. </h5>
 
-```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
-naive_gaussian <- mean(x)
-naive_gaussian_interval <- c(naive_gaussian - z*sd(x), naive_gaussian + z*sd(x))
-plot(append(x, naive_gaussian), type="l")
-
-better_gaussian <- napoved + mean(x.res) + (sd(x.res)^2)/2
-
-spodnja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 - z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
-zgornja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 + z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
-better_gaussian_interval <- c(spodnja_meja, zgornja_meja)
-
-plot(append(x, better_gaussian), type="l", xlim=c(700,850))
-plot(append(x, naslednji), type="l", xlim=c(700,850))
-plot(append(x, naive_gaussian), type="l", xlim=c(700,850))
-plot(append(x, better_gaussian), type="l", xlim=c(700,850))
-
-```
-
-
-
-<h1> DATOTEKA B </h1>
-
-<h5> 1. *Narišite graf in komentirajte, ali se iz njega vidi kakšen trend ali sezonskost.* </h5>
-```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
-file2 <- file("B09los.txt")
-str_data2 <- readLines(file2)
-data2 <- as.numeric(unlist(strsplit(str_data2, " ")))
-x <- ts(data2)
-
-# vsa opazovanja:
-plot(x, main="Časovna vrsta podatki B, vsa opazovanja", type='l')
-
-komentar <- paste('Opazimo trend, na prvi pogled ne opazimo sezonskosti.')
-print(komentar)
-
-```
-
-<h5> 2. *Odstranite morebiten trend in sezonskost z metodami, uporabljenimi pri tečaju: (zaporedno) diferenciranje, logaritmiranje, neposredna ocena sezonskih komponent, polinomski trend stopnje največ 3 ali prileganje periodične funkcije (ali kakšna kombinacija teh metod). Potem ko odstranite morebiten trend, narišite tudi surovi in zglajeni periodogram ter komentirajte, ali se vidi kakšna sezonskost in kakšna naj bi bila perioda.* </h5>
-
-
-```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
-
-#linearni trend? ne dela to, sej nevem a to rabiva?
-# t <- time(x)
-# lint <- lm(x ~ t)
-# # n <- as.numeric(lint$coefficients[1])
-# # k <- as.numeric(lint$coefficients[2])
-# line(time,42.5988+0.2905*time, col = 'red')
-
-
-#Opazujmo diference
-d <- diff(x)
-plot(d, main='Diference časovne vrste B', xlim = c(0,100), ylab=expression(paste(nabla,x[t]," [pp]")),type='l')
-
-abline(h=mean(d),col="blue")
-abline(h=c(mean(d)-sd(d),mean(d)+sd(d)),col="blue",lty="dotted")
-```
-
-```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
-
-perioda <-  periodogram(d)$lambda[which.max(periodogram(d)$periodogram)] 
-
-t <- time(d)
-mod.H2 <- lm(d ~  I(sin(perioda*t)) + I(cos(perioda*t)))
-summary(mod.H2)
-
-d.fit <- mod.H2$fitted.values
-d.res <- mod.H2$residuals
-
-d.fit <- ts(d.fit,start=start(d),frequency=frequency(d))
-d.res <- ts(d.res,start=start(d),frequency=frequency(d))
-
-par(mfrow=c(1,1))
-plot(d, type='l')
-points(d.fit,col="red",type="o",pch=16,cex=0.5)
-par(mfrow=c(1,1))
-plot(d, type='l', xlim=c(50,150))
-points(d.fit,col="red",type="o",pch=16,cex=0.5)
-
-```
-
-
-<h5> 3. *Narišite graf rezidualov in komentirajte, ali so videti stacionarni. Stacionarnost tudi preizkusite z uporabo ustreznih statističnih metod.* </h5>
-
-```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
-# plot(x.res, main="Residuals")
-# 
-# summary(mod.H)$adj.r.squared
-# 
-# plot(x.res, main= 'Residuali časovne vrste A', ylab="Residuals",type='l')
-# 
-# abline(h=mean(x.res),col="blue")
-# abline(h=c(mean(x.res)-sd(x.res),mean(x.res)+sd(x.res)),col="blue",lty="dotted")
-# 
-# library(tseries)
-# # Augmented Dickey-Fuller Test za preverjanje stacionarnosti
-# adf.test(x.res,alternative="stationary")
-# # we say: ro - 1 = gamma 
-# # Ho : gamma = 0 -> random walk (not stationary)
-# # H1 : gamma < 0 -> stationary series
-# 
-# # this test is only appropriate if we remove seasonal and trend component
-# # result: we reject Ho, so series is stationary!
-# 
-# komentar <- paste('Augmented Dickey-Fuller Test ne zavrne stacionarnosti.')
-# print(komentar)
-
-
-```
-
-```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
-
-plot(d.res, main="Residuals")
-
-summary(mod.H2)$adj.r.squared
-
-plot(d.res, main= 'Residuali časovne vrste A', ylab="Residuals",type='l')
-
-abline(h=mean(d.res),col="blue")
-abline(h=c(mean(d.res)-sd(d.res),mean(d.res)+sd(d.res)),col="blue",lty="dotted")
-
-
-library(tseries)
-# Augmented Dickey-Fuller Test za preverjanje stacionarnosti
-adf.test(d.res,alternative="stationary")
-# we say: ro - 1 = gamma 
-# Ho : gamma = 0 -> random walk (not stationary)
-# H1 : gamma < 0 -> stationary series
-
-# this test is only appropriate if we remove seasonal and trend component
-# result: we reject Ho, so series is stationary!
-
-#p-value = 0.01
-
-komentar <- paste('Augmented Dickey-Fuller Test ne zavrne stacionarnosti.')
-print(komentar)
-
-
-```
-
-<h5> 4. *Na rezidualih naredite grafikona ACF in PACF in na njuni podlagi predlagajte vsaj en model vrste AR(p) ali MA(q).* </h5>
-
-```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
-library(forecast)
-
-# #zelo slabo, to ne more biti okej?
-# Acf(x.res, main = "Acf residuals")  
-# Pacf(x.res, main = "Pacf residuals")
-
-Acf(d.res, main = "Acf residuals") #MA(1)?
-Pacf(d.res, main = "Pacf residuals") #AR(3)?
-
-#PREDLOG MODELA:
-komentar <- paste('MA(1)??')
-print(komentar)
-
-```
-
-<h5> 5. *Na podlagi Yule–Walkerjevih cenilk in kriterija AIC izberite najboljši model AR(p). Primerjajte ga z najboljšim modelom ARMA(p, q) za p + q ≤ 3 po kriteriju AIC (pozor: kriterij AIC je lahko definiran drugače od postopka do postopka). Če je videti smiselno, pa namesto tega uporabite model GARCH.* </h5>
-
-```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
-# ==========
-# ARMA model
-# ==========
-ar(d.res, arg = "yule–walker", aic=TRUE)
-
-#Primerjajte ga z najboljšim modelom ARMA(p,q)
-
-# arima(d.res, order=c(1,0,1)) #aic = 2515.59
-# arima(d.res, order=c(1,0,0)) #aic = 2586.78
-arima(d.res, order=c(0,0,1)) #aic = 2513.86 #dejva tega :D
-# arima(d.res, order=c(2,0,1)) #aic = 2516.07
-# arima(d.res, order=c(1,0,2)) #aic = 2517.38
-# arima(d.res, order=c(2,0,0)) #aic = 2540.85
-# arima(d.res, order=c(0,0,2)) #aic = 2515.54
-# arima(d.res, order=c(3,0,0)) #aic = 2528.42
-# arima(d.res, order=c(0,0,3)) #aic = 2516.6
-
-#odločava se med: 1) AR(1) in MA(1),
-#                 2) MA(1),
-#                 3) AR(2) in MA(1)
-#                 4) AR(1) in MA(2)
-#                 5) MA(2)
-#                 6) MA(3)
-
-komentar <- paste('Izbrali sva model MA(1).')
-print(komentar)
-```
-
-```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
-komentar <- paste('Profesor Toman je bil bolj eleganten in se je iskanja rešitve lotil s preprosto zanko.')
-print(komentar)
-
-my.arma <- stats::arima(d,order=c(1,0,1),include.mean=FALSE,method="ML")
-
-AIC(my.arma)
-
-ic.values <- matrix(NA,nrow=3,ncol=3,
-                    dimnames=list(paste("AR=",0:2,sep=""),
-                                  paste("MA=",0:2,sep="")))
-
-for(i in 1:3){
-    for(j in 1:3){
-        my.arma <- stats::arima(d,order=c(i-1,0,j-1),include.mean=FALSE,method="ML")
-        ic.values[i,j] <- AIC(my.arma)
-        remove(my.arma)
-    }
-}
-
-ic.values
-
-which.min(ic.values)
-
-ic.values == min(ic.values)
-
-komentar <- paste('Tudi algoritem vrne model MA(1) ali ARMA(0,1).')
-print(komentar)
-
-my.arma <- stats::arima(d,order=c(0,0,1),include.mean=FALSE,method="ML")
-
-confint(my.arma,level=0.95)
-
-```
-
-
-<h5> 6. *Izberite »optimalni« model in ocenite vse njegove parametre.* </h5>
-
-```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
-# OPTIMALNI MODEL: izberemo tisti model, ki ima najnižji aic. V najinem primeru je to AR(3). Druga možna izbira bi bila model z MA(1) in AR(2).
-komentar <- paste('OPTIMALNI MODEL: izberemo tisti model, ki ima najnižji aic. V najinem primeru je to MA(1).')
-print(komentar)
-
-best <- arima(d.res, order=c(0,0,1))
-plot(best$residuals)
-hist(best$residuals)
-
-#Normality test
-shapiro.test(best$residuals) #p-value = 0.01096
-#From the output, the p-value > 0.05 implying that the distribution of the data are not significantly different from normal distribution. In other words, we can assume the normality.
-
-#plot the results to check the normality
-xx <- seq(-100, 100, by=0.1)
-y1 <- dnorm(xx, mean=mean(best$residuals), sd=(sd(best$residuals)))
-plot(density(best$residuals),col="blue", main ="Normal density funcion comparison", xlab="x")
-lines(xx,y1, col="red")
-legend("topleft",
-       c("Residual density","Normal function"),
-       col=c("blue","red"),
-       lty="solid",
-       bty="n")
-
-komentar <- paste('Shapirov test zavrne hipotezo, torej ne gre za normalno porazdelitev. MOJ KOMENTAR: meni se zdi to zelo normalno?')
-print(komentar)
-```
-
-
-<h5> 7. *Oglejte si ostanke po vašem modelu in komentirajte, ali so videti kot beli šum. Primerjajte njihovo porazdelitev z normalno.* </h5>
-```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
-#odgovori
-#Če je white noise nobena frekvenca ni dominantna. Bi mogel biti graf dokaj raven
-
-plot(periodogram(best$residuals)$lambda, periodogram(best$residuals)$periodogram, type="l")
-
-
-Box.test(d.res, lag = 1, type="Box-Pierce") #p-value = 7.216e-15
-Box.test(d.res, lag = 1, type="Ljung-Box") #p-value = 4.996e-15
-
-
-#The P-Value of the Ljung-Box white noise test is greater than significance level (i.e. α), so we don't reject the white noise hypothesis (Ho), or, simply stated; there is no statistical evidence of a serial correlation, so the data can be white noise.
-
-komentar <- paste('Ne gre za white noise.')
-print(komentar)
-
-```
-
-<h5> 8. *Z uporabo izbranega modela in pod predpostavko normalnosti z R-ovo funkcijo predict konstruirajte 90% napovedni interval za naslednjo vrednost. Ne pozabite vračunati tudi odstranjenega trenda in sezonskosti.* </h5>
-
-```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
-
-# TA DEL JE SKOR ZIHR NAROBE! Sem napisala ?? tja kamor nevem kaj bi napisala
-
-################### TOMAN ############################3
-# ARMA predictions
-
-A <- predict(my.arma,n.ahead=10, level = 0.90)$pred
+A <- predict(best,n.ahead=10, level = 0.90)$pred
 
 # Harmonic regression predictions
 
-B <- predict(mod.H2,n.ahead=10, level = 0.90)[length(mod.H2)-length(A):length(mod.H2)]
+B <- predict(mod.H2,n.ahead=10, level = 0.90)[819:828]
+
 
 # Predictions for differenced data
 
-A+B
+plot(A+B)
 
 # Undiferencing
 
-C <- x[length(x)] + cumsum(A+B)
-C <- ts(C,start=length(x))
-X <- ts.union(x,C)
+C <-  + (A+B)
+C <- ts(C,start=length(d))
+
+X <- ts.union(d,C)
 
 plot(X,plot.type="single",
      ylab="%",
-     col=c("black","blue"))
+     col=c("black","blue"),
+     xlim=c(700,840))
 
 legend("topright",
        c("Observed","Predicted"),
@@ -650,50 +385,32 @@ legend("topright",
        lty="solid",
        bty="n")
 
-##################################################################
-# prediction <- predict(best, n.ahead = 1, interval = "prediction", level = 0.90)
-# val1 <- prediction$pred[1]
-# sd1 <- prediction$se[1]
-# z <- 1.64
-# 
-# n <- length(d) + 1
-# napoved <- ??? +  ??? *sin(perioda*n) + ??? * cos(perioda*n)
-# naslednji <- napoved + val1
-# optimal_interval <- c(napoved + val1 - z*sd1,napoved + val1+z*sd1)
-# plot(append(naslednji, x)[???:???], type="l", main="Prediction", ylab="Value", col='red')
+
 ```
 
-<h5> 9. *Dobljeni napovedni interval primerjajte z napovednim intervalom, ki bi ga dobili, če bi naivno privzeli, da so podatki kar Gaussov beli šum – pred in po odstranitvi trenda in sezonskosti.* </h5>
+<h5> 9. Dobljeni napovedni interval primerjajte z napovednim intervalom, ki bi ga dobili, če bi naivno privzeli, da so podatki kar Gaussov beli šum – pred in po odstranitvi trenda in sezonskosti. </h5>
 
 ```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
 
-#Brina to še ne štima (rima). Moram ugotovit kaj je njuna spremenljivka napoved.
+naive_gaussian <- mean(x)
+naive_gaussian_interval <- c(naive_gaussian - z*sd(x), naive_gaussian + z*sd(x))
+plot(append(x, naive_gaussian), type="l")
 
-# naive_gaussian <- mean(x)
-# z = 1.96
-# naive_gaussian_interval <- c(naive_gaussian - z*sd(x), naive_gaussian + z*sd(x))
-# plot(append(x, naive_gaussian), type="l")
-# 
-# better_gaussian <- napoved + mean(x.res) + (sd(x.res)^2)/2
-# 
-# spodnja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 - z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
-# zgornja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 + z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
-# better_gaussian_interval <- c(spodnja_meja, zgornja_meja)
-# 
-# plot(append(x, better_gaussian), type="l", xlim=c(700,850))
-# plot(append(x, naslednji), type="l", xlim=c(700,850))
-# plot(append(x, naive_gaussian), type="l", xlim=c(700,850))
-# plot(append(x, better_gaussian), type="l", xlim=c(700,850))
+better_gaussian <- napoved + mean(x.res) + (sd(x.res))/2
 
+spodnja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 - z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
+zgornja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 + z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
+better_gaussian_interval <- c(spodnja_meja, zgornja_meja)
+
+
+plot(append(x, better_gaussian), type="l", xlim=c(600,850))
+plot(append(x, naslednji), type="l", xlim=c(700,850))
+plot(append(x, naive_gaussian), type="l", xlim=c(700,850))
+
+par(mfrow=c(1,1))
 ```
 
-
-
-
 <h1> DATOTEKA B, če logaritmiramo </h1>
-
-Brina, tuki že takoj ko logaritmiraš vidiš, da mava problem. Tisti ostri padci niso okej. Nevem kaj naj s tem nardiva :(
-
 
 <h5> 1. *Narišite graf in komentirajte, ali se iz njega vidi kakšen trend ali sezonskost.* </h5>
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
@@ -749,6 +466,95 @@ points(d.fit,col="red",type="o",pch=16,cex=0.5)
 
 ```
 
+```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
+# Smoothed periodogram
+# ====================
+# Raw periodogram as a density estimator (identical numbers)
+
+spectrum(x,
+         log="no",
+         demean=TRUE,
+         detrend=FALSE,
+         taper=0,
+         lwd = 2)
+spectrum(x,
+         log="no",
+         demean=TRUE,
+         detrend=FALSE,
+         taper=0,
+         lwd = 2,
+         xlim=c(0.22,0.28))
+
+# we have to smooth it! By using kernels!
+
+# Smoothing kernels
+kernel(coef='daniell',m=2) #2 steps to the left and 2 steps to the right
+kernel(coef='modified.daniell',m=1) #1 step left & 1 step right
+
+# Iterating smoothing kernels
+kernel(coef='daniell', m=c(1,1))
+kernel(coef='modified.daniell', m=c(1,1))
+
+# Visually choose kernel (Command spec.pgram does the same!)
+spectrum(x,
+         kernel=kernel(coef='modified.daniell', m=2),
+         log="no",
+         demean=TRUE,
+         detrend=FALSE,
+         taper=0,
+         xlim=c(0.22,0.28))
+
+spectrum(x,
+         spans=7, # L = 2m+1 for Modified Daniell kernel (default); "rounds up" if even
+         log="no",
+         demean=TRUE,
+         detrend=FALSE,
+         taper=0,
+         xlim=c(0.22,0.28))
+
+x.sp <- spectrum(d,
+                 kernel=kernel(coef='daniell', m=c(3,3)),
+                 log="no",
+                 demean=TRUE,
+                 detrend=FALSE,
+                 taper=0,
+                 lwd = 1.5,
+                 xlim=c(0.22,0.28))
+
+order(x.sp$spec,decreasing = TRUE)
+
+# Top frequencies at 216 217 215 218
+
+#SM. Periodogram
+x.sp$freq[c(216,217,215,218)]
+
+# Period
+1/x.sp$freq[c(216,217,215,218)]
+
+```
+
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+# DECOMPOSITION ČASOVNE VRSTE, a misliš, da bi blo to fajn?
+
+par(mfrow=c(2,1))
+
+my.trend <- function(t){coefficients(mod.H2)[1]}
+
+plot(rep(my.trend(1), length(mod.H2)), type="l",
+      main="Time series decomposition",
+      xlab="Time",
+      ylab="Trend")
+
+my.season <- function(t){coefficients(mod.H2)[2]*cos(perioda2*t) + coefficients(mod.H2)[3] * I(cos(perioda3*t))+ coefficients(mod.H2)[4]*I(cos(perioda4*t)) + coefficients(mod.H2)[5]*I(sin(perioda5*t)) + coefficients(mod.H2)[6]*I(cos(perioda6*t))}
+
+curve(my.season,from=0, to=length(mod.H2),
+      main="Time series decomposition",
+      xlab="Time",
+      ylab="Season")
+
+par(mfrow=c(1,1))
+
+```
 
 3. *Narišite graf rezidualov in komentirajte, ali so videti stacionarni. Stacionarnost tudi preizkusite z uporabo ustreznih statističnih metod.*
 
@@ -781,12 +587,12 @@ print(komentar)
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 library(forecast)
 
-Acf(d.res, main = "Acf residuals") #MA(5) ali MA(7), to se mi zdi čudno: ne nič od tega
-Pacf(d.res, main = "Pacf residuals") #AR(5)? ne bi smeli dobit še enga ven pri cca. 12, to je slabo
+Acf(d.res, main = "Acf residuals")
+Pacf(d.res, main = "Pacf residuals")
 
 
 #PREDLOG MODELA:
-komentar <- paste('MA(1)??')
+komentar <- paste('Videti je, da nimamo avtokorelacije.')
 print(komentar)
 
 ```
@@ -797,13 +603,13 @@ print(komentar)
 komentar <- paste('Profesor Toman je bil bolj eleganten in se je iskanja rešitve lotil s preprosto zanko.')
 print(komentar)
 
-arima(d.res, order=c(1,0,1))
-
-for (i in 0:3) {
-  for (j in 0:3) {
-    print(c(arima(d.res, order = c(i,0,j))$aic,i,j))
-  }
-}
+arima(d.res, order=c(0,0,0))
+# 
+# for (i in 0:3) {
+#   for (j in 0:3) {
+#     print(c(arima(d.res, order = c(i,0,j))$aic,i,j))
+#   }
+# }
 
 
 # my.arma <- stats::arima(d,order=c(1,0,1),include.mean=FALSE,method="ML")
@@ -827,10 +633,10 @@ for (i in 0:3) {
 # 
 # ic.values == min(ic.values)
 
-komentar <- paste('Tudi algoritem vrne model MA(1) in AR(1) ali ARMA(1,1).')
+komentar <- paste('Algoritem vrne predlog za model ARMA(0,0).')
 print(komentar)
 
-my.arma <- stats::arima(d,order=c(1,0,1),include.mean=FALSE,method="ML")
+my.arma <- stats::arima(d,order=c(0,0,0),include.mean=FALSE,method="ML")
 
 # confint(my.arma,level=0.95)
 
@@ -844,7 +650,7 @@ my.arma <- stats::arima(d,order=c(1,0,1),include.mean=FALSE,method="ML")
 komentar <- paste('OPTIMALNI MODEL: izberemo tisti model, ki ima najnižji aic. V najinem primeru je to ARMA(1,1).')
 print(komentar)
 
-best <- arima(d.res, order=c(1,0,1))
+best <- arima(d.res, order=c(0,0,0))
 plot(best$residuals)
 hist(best$residuals)
 
@@ -862,7 +668,7 @@ legend("topleft",
        lty="solid",
        bty="n")
 
-komentar <- paste('Shapirov test zavrne hipotezo, torej ne gre za normalno porazdelitev.')
+komentar <- paste('Shapirov test zavrne hipotezo, torej ne gre za normalno porazdelitev, kar je očitno tudi z grafa.')
 print(komentar)
 ```
 
@@ -889,29 +695,36 @@ print(komentar)
 8. *Z uporabo izbranega modela in pod predpostavko normalnosti z R-ovo funkcijo predict konstruirajte 90% napovedni interval za naslednjo vrednost. Ne pozabite vračunati tudi odstranjenega trenda in sezonskosti.*
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
-
-# TA DEL JE SKOR ZIHR NAROBE! Sem napisala ?? tja kamor nevem kaj bi napisala
-
-################### TOMAN ############################3
 # ARMA predictions
+prediction <- predict(best, n.ahead = 10, interval = "prediction", level = 0.90)
+val1 <- prediction$pred
+sd1 <- prediction$se
+z <- 1.64
 
-A <- predict(my.arma,n.ahead=10, level = 0.90)$pred
+n <- length(d) + 1
+napoved <- mod.H2$coefficients[1] +  mod.H2$coefficients[2]*sin(perioda*n) +  mod.H2$coefficients[3]* cos(perioda*n)
+naslednji <- exp(napoved + val1)
+optimal_interval <- c(exp(napoved + val1- z*sd1),exp(napoved + val1+z*sd1))
+
+
+A <- predict(best,n.ahead=10, level = 0.90)$pred
 
 # Harmonic regression predictions
 
-B <- predict(mod.H2,n.ahead=10, level = 0.90)[length(mod.H2)-length(A):length(mod.H2)]
+B <- predict(mod.H2,n.ahead=10, level = 0.90)[251:260]
 
 # Predictions for differenced data
 
-A+B
+plot(exp(A+B))
 
 # Undiferencing
 
-C <- x[length(x)] + cumsum(A+B)
+
+C <- exp(A+B)
 C <- ts(C,start=length(x))
 X <- ts.union(x,C)
 
-plot(X,plot.type="single",
+plot(X,plot.type="single",type="o",
      ylab="%",
      col=c("black","blue"))
 
@@ -927,22 +740,23 @@ legend("topright",
 
 ```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
 
-#Brina to še ne štima (rima). Moram ugotovit kaj je njuna spremenljivka napoved.
+x.res <- exp(d.res)
+naive_gaussian <- mean(x)
+z = 1.96
+naive_gaussian_interval <- c(naive_gaussian - z*sd(x), naive_gaussian + z*sd(x))
+plot(append(x, naive_gaussian), type="l")
 
-# naive_gaussian <- mean(x)
-# z = 1.96
-# naive_gaussian_interval <- c(naive_gaussian - z*sd(x), naive_gaussian + z*sd(x))
-# plot(append(x, naive_gaussian), type="l")
-# 
-# better_gaussian <- napoved + mean(x.res) + (sd(x.res)^2)/2
-# 
-# spodnja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 - z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
-# zgornja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 + z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
-# better_gaussian_interval <- c(spodnja_meja, zgornja_meja)
-# 
-# plot(append(x, better_gaussian), type="l", xlim=c(700,850))
-# plot(append(x, naslednji), type="l", xlim=c(700,850))
-# plot(append(x, naive_gaussian), type="l", xlim=c(700,850))
-# plot(append(x, better_gaussian), type="l", xlim=c(700,850))
+better_gaussian <- exp(napoved + mean(d.res) + (sd(d.res))/2)
 
+spodnja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 - z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
+zgornja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 + z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
+better_gaussian_interval <- c(spodnja_meja, zgornja_meja)
+
+
+plot(append(x, better_gaussian), type="l", xlim=c(200,270))
+plot(append(x, naslednji[1]), type="l", xlim=c(200,270))
+plot(append(x, naive_gaussian), type="l", xlim=c(200,270))
+
+
+par(mfrow=c(1,1))
 ```
